frontend-angular-release-0.0.1: Implementation of CRUD Operations
Included PUT, DELETE and GET operations for a profile

--- a/frontend-angular/src/app/app.component.html
+++ b/frontend-angular/src/app/app.component.html
@@ -1,3 +1,6 @@
 <div class="page-wrapper">
+    <mat-toolbar color="primary">
+        <span routerLink="/profiles">Karatê-DÔ Tradicional do Piauí</span>
+    </mat-toolbar>
     <router-outlet></router-outlet>
 </div>
