--- a/frontend-angular/src/app/components/profile-list/profile-list.component.html
+++ b/frontend-angular/src/app/components/profile-list/profile-list.component.html
@@ -1,14 +1,20 @@
-<div class="container">
+<!-- <div class="profile-list-container">
   <mat-form-field>
     <mat-label>Busca</mat-label>
     <input matInput (keyup)="search($event.target.value)" #input>
   </mat-form-field>
-    
+</div> -->
+
+<div class="profile-list-container">   
+  <mat-form-field>
+    <mat-label>Busca</mat-label>
+    <input matInput (keyup)="search($event.target.value)" #input>
+  </mat-form-field>
   <div class="mat-elevation-z8">
     <table mat-table [dataSource]="dataSource" matSort (matSortChange)="onSortChange($event)">
   
       <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by number"> ID </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
         <td mat-cell *matCellDef="let row"> {{row.id}} </td>
       </ng-container>
   
@@ -39,7 +45,7 @@
   
       <ng-container matColumnDef="birthday">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Data de Nascimento </th>
-        <td mat-cell *matCellDef="let row"> {{row.birthday | date:'dd/MM/yyyy'}} </td>
+        <td mat-cell *matCellDef="let row"> {{row.birthday}} </td>
       </ng-container>
   
       <ng-container matColumnDef="cpf">
@@ -50,6 +56,27 @@
       <ng-container matColumnDef="rg">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> RG </th>
         <td mat-cell *matCellDef="let row"> {{row.rg}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="actions">
+        <th mat-header-cell *matHeaderCellDef></th>
+        <td mat-cell *matCellDef="let element">
+        <a [routerLink]="['/profile/update', element.id]"
+          ><mat-icon
+          aria-hidden="false"
+          aria-label="Example home icon"
+          fontIcon="edit"
+          >
+          </mat-icon
+        ></a>
+        <mat-icon
+          (click)="openDeleteModal(element.id)"
+          aria-hidden="false"
+          aria-label="Example delete icon"
+          fontIcon="delete"
+        >
+        </mat-icon>
+        </td>
       </ng-container>
   
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -66,5 +93,8 @@
             [length]="dataLength"
             [pageIndex]="0" [pageSize]="3" [pageSizeOptions]="[2, 3, 4, 5]" (page)="listProfiles($event)">
           </mat-paginator>
+  </div>
+  <div class="create-profile-container">
+    <a mat-raised-button color="primary" routerLink="/profile/create">Adicionar</a>
   </div>
 </div>
