frontend-angular-release-0.0.1: Adjustments on profiles, users and registration
Removed profile.ts
Included model registration service to delete and create
Removed delete and create for model user
Turning get-response-profiles into profiles-response

--- a/frontend-angular/src/app/components/profile-list/profile-list.component.html
+++ b/frontend-angular/src/app/components/profile-list/profile-list.component.html
@@ -95,6 +95,6 @@
           </mat-paginator>
   </div>
   <div class="create-profile-container">
-    <a mat-raised-button color="primary" routerLink="/profile/create">Adicionar</a>
+    <a mat-raised-button color="primary" routerLink="/registration">Adicionar</a>
   </div>
 </div>
