--- a/frontend-angular/src/app/components/create-registration/create-registration.component.html
+++ b/frontend-angular/src/app/components/create-registration/create-registration.component.html
@@ -4,20 +4,26 @@
         <h3 style="text-align: center">Criação de novo perfil</h3>
         <div>
           <mat-form-field appearance="outline" class="form-element">
+            <mat-label>Telefone</mat-label>
+            <input matInput type='text' mask='(00) 00000-0000' placeholder="(00) 00000-0000" [(ngModel)] ="registrationForm.phone" />
+          </mat-form-field>
+        </div>
+        <div>
+          <mat-form-field appearance="outline" class="form-element">
             <mat-label>Email</mat-label>
-            <input matInput  [(ngModel)] ="registrationForm.email" />
+            <input matInput [(ngModel)] ="registrationForm.email" />
           </mat-form-field>
         </div>
         <div>
           <mat-form-field appearance="outline" class="form-element">
             <mat-label>Senha</mat-label>
-            <input matInput  [(ngModel)] ="registrationForm.password" />
+            <input matInput [(ngModel)] ="registrationForm.password" />
           </mat-form-field>
         </div>
         <div>
           <mat-form-field appearance="outline" class="form-element">
             <mat-label>Primeiro nome</mat-label>
-            <input matInput  [(ngModel)] ="registrationForm.firstname" />
+            <input matInput [(ngModel)] ="registrationForm.firstname" />
           </mat-form-field>
         </div>
         <div>
@@ -47,7 +53,7 @@
         <div>
           <mat-form-field appearance="outline" class="form-element">
             <mat-label>Data de nascimento</mat-label>
-            <input matInput data-format="00/00/0000"  placeholder="dd/mm/yyyy" [(ngModel)] ="registrationForm.birthday"/>
+            <input matInput data-format="00/00/0000" mask="d0/M0/0000" placeholder="dd/mm/yyyy" [(ngModel)] ="registrationForm.birthday"/>
           </mat-form-field>
         </div>
         <div>
