--- a/frontend-angular/src/app/components/profile-list/profile-list.component.html
+++ b/frontend-angular/src/app/components/profile-list/profile-list.component.html
@@ -18,14 +18,9 @@
         <td mat-cell *matCellDef="let row"> {{row.id}} </td>
       </ng-container>
   
-      <ng-container matColumnDef="firstname">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Nome </th>
-        <td mat-cell *matCellDef="let row"> {{row.firstname}} </td>
-      </ng-container>
-  
-      <ng-container matColumnDef="lastname">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Sobrenome </th>
-        <td mat-cell *matCellDef="let row"> {{row.lastname}} </td>
+      <ng-container matColumnDef="fullname">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Nome completo </th>
+        <td mat-cell *matCellDef="let row"> {{row.fullname}} </td>
       </ng-container>
   
       <ng-container matColumnDef="father">
@@ -37,10 +32,40 @@
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Mãe </th>
         <td mat-cell *matCellDef="let row"> {{row.mother}} </td>
       </ng-container>
+
+      <ng-container matColumnDef="zipCode">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> CEP </th>
+        <td mat-cell *matCellDef="let row"> {{row.zipCode}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="address">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Logradouro </th>
+        <td mat-cell *matCellDef="let row"> {{row.address}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="number">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Número </th>
+        <td mat-cell *matCellDef="let row"> {{row.number}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="neighbourhood">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Bairro </th>
+        <td mat-cell *matCellDef="let row"> {{row.neighbourhood}} </td>
+      </ng-container>
   
-      <ng-container matColumnDef="hometown">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Cidade Natal </th>
-        <td mat-cell *matCellDef="let row"> {{row.hometown}} </td>
+      <ng-container matColumnDef="city">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Cidade </th>
+        <td mat-cell *matCellDef="let row"> {{row.city}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="state">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Estado </th>
+        <td mat-cell *matCellDef="let row"> {{row.state}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="bloodType">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Tipo Sanguíneo </th>
+        <td mat-cell *matCellDef="let row"> {{row.bloodType}} </td>
       </ng-container>
   
       <ng-container matColumnDef="birthday">
@@ -56,6 +81,11 @@
       <ng-container matColumnDef="rg">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> RG </th>
         <td mat-cell *matCellDef="let row"> {{row.rg}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="phone">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> CONTATO </th>
+        <td mat-cell *matCellDef="let row"> {{row.phone}} </td>
       </ng-container>
 
       <ng-container matColumnDef="actions">
