--- a/frontend-angular/src/app/components/update-profile/update-profile.component.html
+++ b/frontend-angular/src/app/components/update-profile/update-profile.component.html
@@ -4,14 +4,8 @@
         <h3 style="text-align: center">Atualização de perfil</h3>
         <div>
           <mat-form-field appearance="outline" class="form-element">
-            <mat-label>Primeiro nome</mat-label>
-            <input matInput  [(ngModel)] ="profileForm.firstname" />
-          </mat-form-field>
-        </div>
-        <div>
-          <mat-form-field appearance="outline" class="form-element">
-            <mat-label>Sobrenome</mat-label>
-            <input matInput [(ngModel)] ="profileForm.lastname"/>
+            <mat-label>Nome completo</mat-label>
+            <input matInput [(ngModel)] ="profileForm.fullname"/>
           </mat-form-field>
         </div>
         <div>
@@ -28,14 +22,68 @@
         </div>
         <div>
           <mat-form-field appearance="outline" class="form-element">
-            <mat-label>Cidade natal</mat-label>
-            <input matInput [(ngModel)] ="profileForm.hometown"/>
+            <mat-label>CEP</mat-label>
+            <input matInput [(ngModel)] ="profileForm.zipCode"/>
+          </mat-form-field>
+        </div>
+        <div>
+          <mat-form-field appearance="outline" class="form-element">
+            <mat-label>Logradouro</mat-label>
+            <input matInput [(ngModel)] ="profileForm.address"/>
+          </mat-form-field>
+        </div>
+        <div>
+          <mat-form-field appearance="outline" class="form-element">
+            <mat-label>Número</mat-label>
+            <input matInput [(ngModel)] ="profileForm.number"/>
+          </mat-form-field>
+        </div>
+        <div>
+          <mat-form-field appearance="outline" class="form-element">
+            <mat-label>Bairro</mat-label>
+            <input matInput [(ngModel)] ="profileForm.neighbourhood"/>
+          </mat-form-field>
+        </div>
+        <div>
+          <mat-form-field appearance="outline" class="form-element">
+            <mat-label>Cidade</mat-label>
+            <input matInput [(ngModel)] ="profileForm.city"/>
+          </mat-form-field>
+        </div>
+        <div>
+          <mat-form-field appearance="outline" class="form-element">
+            <mat-label>Estado</mat-label>
+            <input matInput [(ngModel)] ="profileForm.state"/>
+          </mat-form-field>
+        </div>
+        <div>
+          <mat-form-field appearance="outline" class="form-element">
+            <mat-label>Tipo Sanguíneo</mat-label>
+            <input matInput [(ngModel)] ="profileForm.bloodType"/>
           </mat-form-field>
         </div>
         <div>
           <mat-form-field appearance="outline" class="form-element">
             <mat-label>Data de nascimento</mat-label>
-            <input matInput [(ngModel)] ="profileForm.birthday"/>
+            <input matInput mask="d0/M0/0000" [leadZeroDateTime]="true" placeholder="dd/mm/yyyy" [(ngModel)] ="profileForm.birthday"/>
+          </mat-form-field>
+        </div>
+        <div>
+          <mat-form-field appearance="outline" class="form-element">
+            <mat-label>CPF</mat-label>
+            <input matInput [(ngModel)] ="profileForm.cpf"/>
+          </mat-form-field>
+        </div>
+        <div>
+          <mat-form-field appearance="outline" class="form-element">
+            <mat-label>RG</mat-label>
+            <input matInput [(ngModel)] ="profileForm.rg"/>
+          </mat-form-field>
+        </div>
+        <div>
+          <mat-form-field appearance="outline" class="form-element">
+            <mat-label>Telefone</mat-label>
+            <input matInput type='text' mask='(00) 00000-0000' placeholder="(00) 00000-0000" [(ngModel)] ="profileForm.phone" />
           </mat-form-field>
         </div>
         <div>
