frontend-angular-release-0.0.1: Changed variable name and created city and state models
Also created validation and some styles on creation registration view

--- a/frontend-angular/src/app/components/update-profile/update-profile.component.html
+++ b/frontend-angular/src/app/components/update-profile/update-profile.component.html
@@ -29,7 +29,7 @@
         <div>
           <mat-form-field appearance="outline" class="form-element">
             <mat-label>Logradouro</mat-label>
-            <input matInput [(ngModel)] ="profileForm.address"/>
+            <input matInput [(ngModel)] ="profileForm.street"/>
           </mat-form-field>
         </div>
         <div>
