--- a/frontend-angular/src/app/components/create-registration/create-registration.component.html
+++ b/frontend-angular/src/app/components/create-registration/create-registration.component.html
@@ -1,111 +1,128 @@
 <div class="container create-registration-container">
-    <div>
-      <mat-card>
-        <h3 style="text-align: center">Criação de novo perfil</h3>
-        
-        <div>
-          <mat-form-field appearance="outline" class="form-element">
-            <mat-label>Email</mat-label>
-            <input matInput [(ngModel)] ="registrationForm.email" />
-          </mat-form-field>
-        </div>
-        <div>
-          <mat-form-field appearance="outline" class="form-element">
-            <mat-label>Senha</mat-label>
-            <input matInput [type]="hide ? 'password' : 'text'">
-            <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
-              <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-            </button>
-          </mat-form-field>
-        </div>
-        <div>
-          <mat-form-field appearance="outline" class="form-element">
-            <mat-label>Nome completo</mat-label>
-            <input matInput [(ngModel)] ="registrationForm.fullname"/>
-          </mat-form-field>
-        </div>
-        <div>
-          <mat-form-field appearance="outline" class="form-element">
-            <mat-label>Nome do pai</mat-label>
-            <input matInput [(ngModel)] ="registrationForm.father"/>
-          </mat-form-field>
-        </div>
-        <div>
-          <mat-form-field appearance="outline" class="form-element">
-            <mat-label>Nome da mãe</mat-label>
-            <input matInput [(ngModel)] ="registrationForm.mother"/>
-          </mat-form-field>
-        </div>
-        <div>
-          <mat-form-field appearance="outline" class="form-element">
-            <mat-label>CEP</mat-label>
-            <input matInput [(ngModel)] ="registrationForm.zipCode"/>
-          </mat-form-field>
-        </div>
-        <div>
-          <mat-form-field appearance="outline" class="form-element">
-            <mat-label>Logradouro</mat-label>
-            <input matInput [(ngModel)] ="registrationForm.address"/>
-          </mat-form-field>
-        </div>
-        <div>
-          <mat-form-field appearance="outline" class="form-element">
-            <mat-label>Número</mat-label>
-            <input matInput [(ngModel)] ="registrationForm.number"/>
-          </mat-form-field>
-        </div>
-        <div>
-          <mat-form-field appearance="outline" class="form-element">
-            <mat-label>Bairro</mat-label>
-            <input matInput [(ngModel)] ="registrationForm.neighbourhood"/>
-          </mat-form-field>
-        </div>
-        <div>
-          <mat-form-field appearance="outline" class="form-element">
-            <mat-label>Cidade</mat-label>
-            <input matInput [(ngModel)] ="registrationForm.city"/>
-          </mat-form-field>
-        </div>
-        <div>
-          <mat-form-field appearance="outline" class="form-element">
-            <mat-label>Estado</mat-label>
-            <input matInput [(ngModel)] ="registrationForm.state"/>
-          </mat-form-field>
-        </div>
-        <div>
-          <mat-form-field appearance="outline" class="form-element">
-            <mat-label>Tipo Sanguíneo</mat-label>
-            <input matInput [(ngModel)] ="registrationForm.bloodType"/>
-          </mat-form-field>
-        </div>
-        <div>
-          <mat-form-field appearance="outline" class="form-element">
-            <mat-label>Data de nascimento</mat-label>
-            <input matInput mask="d0/M0/0000" [leadZeroDateTime]="true" placeholder="dd/mm/yyyy" [(ngModel)] ="registrationForm.birthday"/>
-          </mat-form-field>
-        </div>
-        <div>
-          <mat-form-field appearance="outline" class="form-element">
-            <mat-label>CPF</mat-label>
-            <input matInput [(ngModel)] ="registrationForm.cpf"/>
-          </mat-form-field>
-        </div>
-        <div>
-          <mat-form-field appearance="outline" class="form-element">
-            <mat-label>RG</mat-label>
-            <input matInput [(ngModel)] ="registrationForm.rg"/>
-          </mat-form-field>
-        </div>
-        <div>
-          <mat-form-field appearance="outline" class="form-element">
-            <mat-label>Telefone</mat-label>
-            <input matInput type='text' mask='(00) 00000-0000' placeholder="(00) 00000-0000" [(ngModel)] ="registrationForm.phone" />
-          </mat-form-field>
-        </div>
-        <div>
-          <button mat-raised-button color="primary" (click)="createRegistration()">Criar</button>
-          <button mat-raised-button color="secundary" (click)="cancel()">Voltar</button>
-        </div>
-      </mat-card>
+  <form [formGroup]="registrationFormGroup" (ngSubmit)="createRegistration()">
+    <h3 style="text-align: center">Criação de novo perfil</h3>
+    <div formGroupName="user" class="form-area">
+      <h3>Dados de autenticação</h3>
+      <div>
+        <mat-form-field appearance="outline" class="form-element">
+          <mat-label>Email</mat-label>
+          <input matInput [(ngModel)] ="registrationForm.email" formControlName="email"/>
+        </mat-form-field>
+      </div>
+      <div>
+        <mat-form-field appearance="outline" class="form-element">
+          <mat-label>Senha</mat-label>
+          <input matInput [type]="hide ? 'password' : 'text'" formControlName="password">
+          <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+            <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+          </button>
+        </mat-form-field>
+      </div>
     </div>
-  </div>
+
+    <div formGroupName="personal" class="form-area">
+      <h3>Dados pessoais</h3>
+      <div>
+        <mat-form-field appearance="outline" class="form-element">
+          <mat-label>Nome completo</mat-label>
+          <input matInput [(ngModel)] ="registrationForm.fullname" formControlName="fullname"/>
+        </mat-form-field>
+      </div>
+      <div>
+        <mat-form-field appearance="outline" class="form-element">
+          <mat-label>Nome do pai</mat-label>
+          <input matInput [(ngModel)] ="registrationForm.father" formControlName="father"/>
+        </mat-form-field>
+      </div>
+      <div>
+        <mat-form-field appearance="outline" class="form-element">
+          <mat-label>Nome da mãe</mat-label>
+          <input matInput [(ngModel)] ="registrationForm.mother" formControlName="mother"/>
+        </mat-form-field>
+      </div>
+      <div>
+        <mat-form-field appearance="outline" class="form-element">
+          <mat-label>Tipo Sanguíneo</mat-label>
+          <input matInput [(ngModel)] ="registrationForm.bloodType" formControlName="bloodType"/>
+        </mat-form-field>
+      </div>
+      <div>
+        <mat-form-field appearance="outline" class="form-element">
+          <mat-label>Data de nascimento</mat-label>
+          <input matInput mask="d0/M0/0000" [leadZeroDateTime]="true" placeholder="dd/mm/yyyy" [(ngModel)] ="registrationForm.birthday" formControlName="birthday"/>
+        </mat-form-field>
+      </div>
+      <div>
+        <mat-form-field appearance="outline" class="form-element">
+          <mat-label>CPF</mat-label>
+          <input matInput [(ngModel)] ="registrationForm.cpf" formControlName="cpf"/>
+        </mat-form-field>
+      </div>
+      <div>
+        <mat-form-field appearance="outline" class="form-element">
+          <mat-label>RG</mat-label>
+          <input matInput [(ngModel)] ="registrationForm.rg" formControlName="rg"/>
+        </mat-form-field>
+      </div>
+      <div>
+        <mat-form-field appearance="outline" class="form-element">
+          <mat-label>Telefone</mat-label>
+          <input matInput type='text' mask='(00) 00000-0000' placeholder="(00) 00000-0000" [(ngModel)] ="registrationForm.phone" formControlName="phone"/>
+        </mat-form-field>
+      </div>
+    </div>
+    
+    <div formGroupName="address" class="form-area">
+      <h3>Endereço</h3>
+      <div>
+        <mat-form-field appearance="outline" class="form-element">
+          <mat-label>CEP</mat-label>
+          <input matInput [(ngModel)] ="registrationForm.zipCode" formControlName="zipCode"/>
+        </mat-form-field>
+      </div>
+      <div>
+        <mat-form-field appearance="outline" class="form-element">
+          <mat-label>Logradouro</mat-label>
+          <input matInput [(ngModel)] ="registrationForm.street" formControlName="street"/>
+        </mat-form-field>
+      </div>
+      <div>
+        <mat-form-field appearance="outline" class="form-element">
+          <mat-label>Número</mat-label>
+          <input matInput [(ngModel)] ="registrationForm.number" formControlName="number"/>
+        </mat-form-field>
+      </div>
+      <div>
+        <mat-form-field appearance="outline" class="form-element">
+          <mat-label>Bairro</mat-label>
+          <input matInput [(ngModel)] ="registrationForm.neighbourhood" formControlName="neighbourhood"/>
+        </mat-form-field>
+      </div>
+      <div>
+        <mat-form-field appearance="outline" class="form-element">
+          <mat-label>Cidade</mat-label>
+          <mat-select formControlName="city">
+            <mat-option  *ngFor="let city of addressCities" [value]="city">
+              {{ city.name }}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+      </div>
+      <div>
+        <mat-form-field appearance="outline" class="form-element">
+          <mat-label>Estado</mat-label>
+          <mat-select (selectionChange)="getCities('address')" formControlName="state">
+            <mat-option  *ngFor="let state of states" [value]="state">
+              {{ state.name }}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+      </div>
+    </div>
+
+    <div>
+      <button mat-raised-button color="primary" type="submit">Criar</button>
+      <button mat-raised-button color="secundary" (click)="cancel()">Voltar</button>
+    </div>
+  </form >
+</div>
