--- a/frontend-angular/src/app/components/profile-list/profile-list.component.html
+++ b/frontend-angular/src/app/components/profile-list/profile-list.component.html
@@ -38,9 +38,9 @@
         <td mat-cell *matCellDef="let row"> {{row.zipCode}} </td>
       </ng-container>
 
-      <ng-container matColumnDef="address">
+      <ng-container matColumnDef="street">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Logradouro </th>
-        <td mat-cell *matCellDef="let row"> {{row.address}} </td>
+        <td mat-cell *matCellDef="let row"> {{row.street}} </td>
       </ng-container>
 
       <ng-container matColumnDef="number">
