--- a/frontend-angular/src/styles.css
+++ b/frontend-angular/src/styles.css
@@ -2,8 +2,17 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
 .container {
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.form-area{
+    background:rgb(227, 236, 243);
+    position:relative;
+    margin-bottom:45px;
+    padding:50px 20px;
+    border:3px solid #021bf4
 }
