--- a/frontend-angular/src/app/app.component.html
+++ b/frontend-angular/src/app/app.component.html
@@ -1,6 +1,7 @@
 <div class="page-wrapper">
     <mat-toolbar color="primary">
-        <span routerLink="/profiles">Karatê-DÔ Tradicional do Piauí</span>
+        <span class="menu-item">Karatê-DÔ Tradicional do Piauí</span>
+        <span><a [routerLink]="['/profiles']" class="menu-item">Fichas</a></span>
     </mat-toolbar>
     <router-outlet></router-outlet>
 </div>
