--- a/frontend-angular/src/styles.css
+++ b/frontend-angular/src/styles.css
@@ -16,3 +16,28 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     padding:50px 20px;
     border:3px solid #021bf4
 }
+
+mat-toolbar {
+    background-color: #2196F3;
+    color: #fff;
+    height: 64px;
+    display: flex;
+    align-items: center;
+}
+
+.menu-item {
+    text-decoration: none;
+    color: #fff;
+    font-weight: bold;
+    padding: 0 20px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.menu-item:hover {
+    background-color: #1565C0;
+}
+
+.menu-item:last-child {
+    margin-right: auto;
+}
