--- a/frontend-angular/src/app/components/create-registration/create-registration.component.html
+++ b/frontend-angular/src/app/components/create-registration/create-registration.component.html
@@ -5,14 +5,14 @@
       <h3>Dados de autenticação</h3>
       <div>
         <mat-form-field appearance="outline" class="form-element">
-          <mat-label>Email</mat-label>
-          <input matInput [(ngModel)] ="registrationForm.email" formControlName="email"/>
+          <mat-label for="email">Email</mat-label>
+          <input matInput [(ngModel)] ="registrationForm.email" formControlName="email" id="email"/>
         </mat-form-field>
       </div>
       <div>
         <mat-form-field appearance="outline" class="form-element">
-          <mat-label>Senha</mat-label>
-          <input matInput [type]="hide ? 'password' : 'text'" formControlName="password">
+          <mat-label for="password">Senha</mat-label>
+          <input matInput [type]="hide ? 'password' : 'text'" formControlName="password" id="password">
           <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
             <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
           </button>
@@ -24,50 +24,50 @@
       <h3>Dados pessoais</h3>
       <div>
         <mat-form-field appearance="outline" class="form-element">
-          <mat-label>Nome completo</mat-label>
-          <input matInput [(ngModel)] ="registrationForm.fullname" formControlName="fullname"/>
+          <mat-label for="fullname">Nome completo</mat-label>
+          <input matInput [(ngModel)] ="registrationForm.fullname" formControlName="fullname" id="fullname"/>
         </mat-form-field>
       </div>
       <div>
         <mat-form-field appearance="outline" class="form-element">
-          <mat-label>Nome do pai</mat-label>
-          <input matInput [(ngModel)] ="registrationForm.father" formControlName="father"/>
+          <mat-label for="father">Nome do pai</mat-label>
+          <input matInput [(ngModel)] ="registrationForm.father" formControlName="father" id="father"/>
         </mat-form-field>
       </div>
       <div>
         <mat-form-field appearance="outline" class="form-element">
-          <mat-label>Nome da mãe</mat-label>
-          <input matInput [(ngModel)] ="registrationForm.mother" formControlName="mother"/>
+          <mat-label for="mother">Nome da mãe</mat-label>
+          <input matInput [(ngModel)] ="registrationForm.mother" formControlName="mother" id="mother"/>
         </mat-form-field>
       </div>
       <div>
         <mat-form-field appearance="outline" class="form-element">
-          <mat-label>Tipo Sanguíneo</mat-label>
-          <input matInput [(ngModel)] ="registrationForm.bloodType" formControlName="bloodType"/>
+          <mat-label for="bloodType">Tipo Sanguíneo</mat-label>
+          <input matInput [(ngModel)] ="registrationForm.bloodType" formControlName="bloodType" id="bloodType"/>
         </mat-form-field>
       </div>
       <div>
         <mat-form-field appearance="outline" class="form-element">
-          <mat-label>Data de nascimento</mat-label>
-          <input matInput mask="d0/M0/0000" [leadZeroDateTime]="true" placeholder="dd/mm/yyyy" [(ngModel)] ="registrationForm.birthday" formControlName="birthday"/>
+          <mat-label for="birthday">Data de nascimento</mat-label>
+          <input matInput mask="d0/M0/0000" [leadZeroDateTime]="true" placeholder="dd/mm/yyyy" [(ngModel)] ="registrationForm.birthday" formControlName="birthday" id="birthday"/>
         </mat-form-field>
       </div>
       <div>
         <mat-form-field appearance="outline" class="form-element">
-          <mat-label>CPF</mat-label>
-          <input matInput [(ngModel)] ="registrationForm.cpf" formControlName="cpf"/>
+          <mat-label for="cpf">CPF</mat-label>
+          <input matInput [(ngModel)] ="registrationForm.cpf" formControlName="cpf" id="cpf"/>
         </mat-form-field>
       </div>
       <div>
         <mat-form-field appearance="outline" class="form-element">
-          <mat-label>RG</mat-label>
-          <input matInput [(ngModel)] ="registrationForm.rg" formControlName="rg"/>
+          <mat-label for="rg">RG</mat-label>
+          <input matInput [(ngModel)] ="registrationForm.rg" formControlName="rg" id="rg"/>
         </mat-form-field>
       </div>
       <div>
         <mat-form-field appearance="outline" class="form-element">
-          <mat-label>Telefone</mat-label>
-          <input matInput type='text' mask='(00) 00000-0000' placeholder="(00) 00000-0000" [(ngModel)] ="registrationForm.phone" formControlName="phone"/>
+          <mat-label for="phone">Telefone</mat-label>
+          <input matInput type='text' mask='(00) 00000-0000' placeholder="(00) 00000-0000" [(ngModel)] ="registrationForm.phone" formControlName="phone" id="phone"/>
         </mat-form-field>
       </div>
     </div>
@@ -76,32 +76,32 @@
       <h3>Endereço</h3>
       <div>
         <mat-form-field appearance="outline" class="form-element">
-          <mat-label>CEP</mat-label>
-          <input matInput [(ngModel)] ="registrationForm.zipCode" formControlName="zipCode"/>
+          <mat-label for="zipCode">CEP</mat-label>
+          <input matInput [(ngModel)] ="registrationForm.zipCode" formControlName="zipCode" id="zipCode"/>
         </mat-form-field>
       </div>
       <div>
         <mat-form-field appearance="outline" class="form-element">
-          <mat-label>Logradouro</mat-label>
-          <input matInput [(ngModel)] ="registrationForm.street" formControlName="street"/>
+          <mat-label for="street">Logradouro</mat-label>
+          <input matInput [(ngModel)] ="registrationForm.street" formControlName="street" id="street"/>
         </mat-form-field>
       </div>
       <div>
         <mat-form-field appearance="outline" class="form-element">
-          <mat-label>Número</mat-label>
-          <input matInput [(ngModel)] ="registrationForm.number" formControlName="number"/>
+          <mat-label for="number">Número</mat-label>
+          <input matInput [(ngModel)] ="registrationForm.number" formControlName="number" id="number"/>
         </mat-form-field>
       </div>
       <div>
         <mat-form-field appearance="outline" class="form-element">
-          <mat-label>Bairro</mat-label>
-          <input matInput [(ngModel)] ="registrationForm.neighbourhood" formControlName="neighbourhood"/>
+          <mat-label for="neighbourhood">Bairro</mat-label>
+          <input matInput [(ngModel)] ="registrationForm.neighbourhood" formControlName="neighbourhood" id="neighbourhood"/>
         </mat-form-field>
       </div>
       <div>
         <mat-form-field appearance="outline" class="form-element">
-          <mat-label>Cidade</mat-label>
-          <mat-select formControlName="city">
+          <mat-label for="city">Cidade</mat-label>
+          <mat-select formControlName="city" id="city">
             <mat-option  *ngFor="let city of addressCities" [value]="city">
               {{ city.name }}
             </mat-option>
@@ -110,8 +110,8 @@
       </div>
       <div>
         <mat-form-field appearance="outline" class="form-element">
-          <mat-label>Estado</mat-label>
-          <mat-select (selectionChange)="getCities('address')" formControlName="state">
+          <mat-label for="state">Estado</mat-label>
+          <mat-select (selectionChange)="getCities('address')" formControlName="state" id="state">
             <mat-option  *ngFor="let state of states" [value]="state">
               {{ state.name }}
             </mat-option>
