0003: Created a tournaments list page

--- a/frontend-angular/src/app/app.component.html
+++ b/frontend-angular/src/app/app.component.html
@@ -2,6 +2,7 @@
     <mat-toolbar color="primary">
         <span class="menu-item">Karatê-DÔ Tradicional do Piauí</span>
         <span><a [routerLink]="['/profiles']" class="menu-item">Fichas</a></span>
+        <span><a [routerLink]="['/tournaments']" class="menu-item">Torneios</a></span>
     </mat-toolbar>
     <router-outlet></router-outlet>
 </div>
