--- a/frontend-angular/src/app/components/profile-list/profile-list.component.html
+++ b/frontend-angular/src/app/components/profile-list/profile-list.component.html
@@ -23,32 +23,32 @@
 
       <ng-container matColumnDef="zipCode">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> CEP </th>
-        <td mat-cell *matCellDef="let row"> {{row.zipCode}} </td>
+        <td mat-cell *matCellDef="let row"> {{row.address.zipCode}} </td>
       </ng-container>
 
       <ng-container matColumnDef="street">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Logradouro </th>
-        <td mat-cell *matCellDef="let row"> {{row.street}} </td>
+        <td mat-cell *matCellDef="let row"> {{row.address.street}} </td>
       </ng-container>
 
       <ng-container matColumnDef="number">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Número </th>
-        <td mat-cell *matCellDef="let row"> {{row.number}} </td>
+        <td mat-cell *matCellDef="let row"> {{row.address.number}} </td>
       </ng-container>
 
       <ng-container matColumnDef="neighbourhood">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Bairro </th>
-        <td mat-cell *matCellDef="let row"> {{row.neighbourhood}} </td>
+        <td mat-cell *matCellDef="let row"> {{row.address.neighbourhood}} </td>
       </ng-container>
   
       <ng-container matColumnDef="city">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Cidade </th>
-        <td mat-cell *matCellDef="let row"> {{row.city}} </td>
+        <td mat-cell *matCellDef="let row"> {{row.address.city}} </td>
       </ng-container>
 
       <ng-container matColumnDef="state">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Estado </th>
-        <td mat-cell *matCellDef="let row"> {{row.state}} </td>
+        <td mat-cell *matCellDef="let row"> {{row.address.state}} </td>
       </ng-container>
 
       <ng-container matColumnDef="bloodType">
