--- a/frontend-angular/src/app/components/tournaments-list/tournaments-list.component.html
+++ b/frontend-angular/src/app/components/tournaments-list/tournaments-list.component.html
@@ -13,27 +13,27 @@
 
             <ng-container matColumnDef="location">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Localização </th>
-                <td mat-cell *matCellDef="let row"> {{row.location}} </td>
+                <td mat-cell *matCellDef="let row"> {{row.address.city}} </td>
             </ng-container>
 
             <ng-container matColumnDef="status">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
-                <td mat-cell *matCellDef="let row"> {{row.status}} </td>
+                <td mat-cell *matCellDef="let row"> {{row.status | enumTranslation}} </td>
             </ng-container>
 
             <ng-container matColumnDef="numberOfParticipants">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Quantidade de participantes </th>
-                <td mat-cell *matCellDef="let row"> {{row.mother}} </td>
+                <td mat-cell *matCellDef="let row"> {{row.numberOfParticipants}} </td>
             </ng-container>
 
             <ng-container matColumnDef="eventDate">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Data de realização </th>
-                <td mat-cell *matCellDef="let row"> {{row.birthday}} </td>
+                <td mat-cell *matCellDef="let row"> {{row.eventDateTime | date: 'dd/MM/yyyy'}} </td>
             </ng-container>
 
             <ng-container matColumnDef="eventTime">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Horário de início </th>
-                <td mat-cell *matCellDef="let row"> {{row.eventTime}} </td>
+                <td mat-cell *matCellDef="let row"> {{row.eventDateTime | date: 'hh:mm'}} </td>
             </ng-container>
 
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
