--- a/frontend-angular/src/app/components/update-profile/update-profile.component.html
+++ b/frontend-angular/src/app/components/update-profile/update-profile.component.html
@@ -23,37 +23,37 @@
         <div>
           <mat-form-field appearance="outline" class="form-element">
             <mat-label>CEP</mat-label>
-            <input matInput [(ngModel)] ="profileForm.zipCode"/>
+            <input matInput [(ngModel)] ="profileForm.address.zipCode"/>
           </mat-form-field>
         </div>
         <div>
           <mat-form-field appearance="outline" class="form-element">
             <mat-label>Logradouro</mat-label>
-            <input matInput [(ngModel)] ="profileForm.street"/>
+            <input matInput [(ngModel)] ="profileForm.address.street"/>
           </mat-form-field>
         </div>
         <div>
           <mat-form-field appearance="outline" class="form-element">
             <mat-label>Número</mat-label>
-            <input matInput [(ngModel)] ="profileForm.number"/>
+            <input matInput [(ngModel)] ="profileForm.address.number"/>
           </mat-form-field>
         </div>
         <div>
           <mat-form-field appearance="outline" class="form-element">
             <mat-label>Bairro</mat-label>
-            <input matInput [(ngModel)] ="profileForm.neighbourhood"/>
+            <input matInput [(ngModel)] ="profileForm.address.neighbourhood"/>
           </mat-form-field>
         </div>
         <div>
           <mat-form-field appearance="outline" class="form-element">
             <mat-label>Cidade</mat-label>
-            <input matInput [(ngModel)] ="profileForm.city"/>
+            <input matInput [(ngModel)] ="profileForm.address.city"/>
           </mat-form-field>
         </div>
         <div>
           <mat-form-field appearance="outline" class="form-element">
             <mat-label>Estado</mat-label>
-            <input matInput [(ngModel)] ="profileForm.state"/>
+            <input matInput [(ngModel)] ="profileForm.address.state"/>
           </mat-form-field>
         </div>
         <div>
