0011: Created Login Page and ajustments on tournaments endpoint
Included basic login
Created RequestService
TournamentService calls RequestService to call /tournaments?**
Tournaments loads tournaments only if there's token

--- a/frontend-angular/src/app/components/header/header.component.html
+++ b/frontend-angular/src/app/components/header/header.component.html
@@ -2,4 +2,7 @@
     <span class="menu-item">Karatê-DÔ Tradicional do Piauí</span>
     <span><a [routerLink]="['/profiles']" class="menu-item">Fichas</a></span>
     <span><a [routerLink]="['/tournaments']" class="menu-item">Torneios</a></span>
+    <span class="menu-item" style="flex-grow: 1; text-align: right;">
+        <a [routerLink]="['/login']" class="menu-item" style="text-align: right;">Entrar</a>
+    </span>
 </mat-toolbar>
