--- a/frontend-angular/src/app/components/header/header.component.html
+++ b/frontend-angular/src/app/components/header/header.component.html
@@ -1,8 +1,20 @@
 <mat-toolbar color="primary">
     <span class="menu-item">Karatê-DÔ Tradicional do Piauí</span>
-    <span><a [routerLink]="['/profiles']" class="menu-item">Fichas</a></span>
-    <span><a [routerLink]="['/tournaments']" class="menu-item">Torneios</a></span>
-    <span class="menu-item" style="flex-grow: 1; text-align: right;">
-        <a [routerLink]="['/login']" class="menu-item" style="text-align: right;">Entrar</a>
-    </span>
+
+    <div *ngIf="currentUserSignal()">
+        {{ authenticationService.currentUserSignal()?.firstname }}
+        {{ authenticationService.currentUserSignal()?.lastname }}
+        <span><a [routerLink]="['/profiles']" class="menu-item">Fichas</a></span>
+        <span><a [routerLink]="['/tournaments']" class="menu-item">Torneios</a></span>
+        <span class="menu-item" style="flex-grow: 1; text-align: right;">
+            <button (click)="logout()" class="menu-item" style="text-align: right;">Sair</button>
+        </span>
+    </div>
+
+    <div *ngIf="currentUserSignal() === null">
+        <span><a [routerLink]="['/registration']" class="menu-item">Cadastrar</a></span>
+        <span class="menu-item" style="flex-grow: 1; text-align: right;">
+            <a [routerLink]="['/login']" class="menu-item" style="text-align: right;">Entrar</a>
+        </span>
+    </div>
 </mat-toolbar>
