--- a/frontend-angular/src/app/components/login-form/login-form.component.html
+++ b/frontend-angular/src/app/components/login-form/login-form.component.html
@@ -1,16 +1,15 @@
-<!-- login.component.html -->
 <div class="login-container">
     <mat-card class="login-card">
         <mat-card-header>
             <mat-card-title class="login-title">Login</mat-card-title>
         </mat-card-header>
         <mat-card-content>
-            <form (ngSubmit)="onSubmitLogin()">
+            <form [formGroup]="formGroup" (ngSubmit)="onSubmitLogin()">
                 <mat-form-field class="login-input">
-                    <input matInput placeholder="Email" [(ngModel)]="login" name="email">
+                    <input matInput type="text" placeholder="Email" formControlName="email" name="email">
                 </mat-form-field>
                 <mat-form-field class="login-input">
-                    <input matInput type="password" placeholder="Senha" [(ngModel)]="password" name="password">
+                    <input matInput type="password" placeholder="Senha" formControlName="password" name="password">
                 </mat-form-field>
                 <div class="login-button-container">
                     <button mat-raised-button color="primary" type="submit">Login</button>
