0015: Fixed bug on logging
Also cleaned header html
Put home routerlink into main title of header

--- a/frontend-angular/src/app/components/header/header.component.html
+++ b/frontend-angular/src/app/components/header/header.component.html
@@ -1,9 +1,9 @@
 <mat-toolbar color="primary">
-    <span class="menu-item">Karatê-DÔ Tradicional do Piauí</span>
+    <span><a [routerLink]="['/home']" class="menu-item">
+        Karatê-DÔ Tradicional do Piauí
+    </a></span>
 
     <div *ngIf="currentUserSignal()">
-        {{ authenticationService.currentUserSignal()?.firstname }}
-        {{ authenticationService.currentUserSignal()?.lastname }}
         <span><a [routerLink]="['/profiles']" class="menu-item">Fichas</a></span>
         <span><a [routerLink]="['/tournaments']" class="menu-item">Torneios</a></span>
         <span class="menu-item" style="flex-grow: 1; text-align: right;">
