0015: Created users listing and evaluations pages
Also removed unused files and comments
RegistrationService now uses RequestService for requests
Fixed endpoint and url inside request.service

--- a/frontend-angular/src/app/components/header/header.component.html
+++ b/frontend-angular/src/app/components/header/header.component.html
@@ -4,6 +4,7 @@
     </a></span>
 
     <div *ngIf="currentUserSignal()">
+        <span><a [routerLink]="['/users']" class="menu-item">Usuários</a></span>
         <span><a [routerLink]="['/profiles']" class="menu-item">Fichas</a></span>
         <span><a [routerLink]="['/tournaments']" class="menu-item">Torneios</a></span>
         <span class="menu-item" style="flex-grow: 1; text-align: right;">
