0015: Adjustments on routes
Split routes to a const
Changed icon and title to evaluate user
Included on app.module configurations to intercept request

--- a/frontend-angular/src/app/components/evaluate-dialog-user/evaluate-dialog-user.component.html
+++ b/frontend-angular/src/app/components/evaluate-dialog-user/evaluate-dialog-user.component.html
@@ -1,6 +1,5 @@
-<h1 mat-dialog-title>Delete Item</h1>
+<h1 mat-dialog-title>Avaliação de usuário</h1>
 <div mat-dialog-content>
-    Avaliação de usuário
     <div>
         <mat-form-field appearance="outline" class="form-element">
             <mat-label for="authority">Autoridade</mat-label>
