--- a/frontend-angular/src/app/components/user-list/user-list.component.html
+++ b/frontend-angular/src/app/components/user-list/user-list.component.html
@@ -37,7 +37,7 @@
                     <mat-icon (click)="openEvaluationModal(element.id)"
                         aria-hidden="false"
                         aria-label="Example delete icon"
-                        fontIcon="delete">
+                        fontIcon="edit">
                     </mat-icon>
                 </td>
             </ng-container>
