0017: Created addresses page
Also deleted an unnecessary file

--- a/frontend-angular/src/app/components/header/header.component.html
+++ b/frontend-angular/src/app/components/header/header.component.html
@@ -7,6 +7,7 @@
         <span><a [routerLink]="['/users']" class="menu-item">Usuários</a></span>
         <span><a [routerLink]="['/profiles']" class="menu-item">Fichas</a></span>
         <span><a [routerLink]="['/tournaments']" class="menu-item">Torneios</a></span>
+        <span><a [routerLink]="['/addresses']" class="menu-item">Endereços</a></span>
         <span class="menu-item" style="flex-grow: 1; text-align: right;">
             <button (click)="logout()" class="menu-item" style="text-align: right;">Sair</button>
         </span>
