0023: Included snackbar and auth0-angular-jwt
Fixed problem by registrating user
Fixed problem by get all states from Brazil

--- a/frontend-angular/src/app/components/create-registration/create-registration.component.html
+++ b/frontend-angular/src/app/components/create-registration/create-registration.component.html
@@ -12,7 +12,7 @@
       <div>
         <mat-form-field appearance="outline" class="form-element">
           <mat-label for="password">Senha</mat-label>
-          <input matInput [type]="hide ? 'password' : 'text'" formControlName="password" id="password">
+          <input matInput [type]="hide ? 'password' : 'text'" [(ngModel)] ="registrationForm.password" formControlName="password" id="password">
           <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
             <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
           </button>
