0028: Created page for creating tournament

--- a/frontend-angular/src/app/components/tournaments-list/tournaments-list.component.html
+++ b/frontend-angular/src/app/components/tournaments-list/tournaments-list.component.html
@@ -35,19 +35,21 @@
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Horário de início </th>
                 <td mat-cell *matCellDef="let row"> {{row.eventDateTime | date: 'hh:mm'}} </td>
             </ng-container>
-            
+
             <ng-container matColumnDef="actions">
                 <th mat-header-cell *matHeaderCellDef></th>
                 <td mat-cell *matCellDef="let element">
                     <div *ngIf="isLoggedUserParticipating(element.participants)">
-                        <mat-icon matTooltip="Desinscrever-se deste torneio" (click)="openParticipationInTournament(element.id)">
+                        <mat-icon matTooltip="Desinscrever-se deste torneio"
+                            (click)="openParticipationInTournament(element.id)">
                             <span class="material-symbols-outlined">
                                 cancel
                             </span>
                         </mat-icon>
                     </div>
                     <div *ngIf="!isLoggedUserParticipating(element.participants)">
-                        <mat-icon matTooltip="Inscrever-se neste torneio" (click)="openParticipationInTournament(element.id)">
+                        <mat-icon matTooltip="Inscrever-se neste torneio"
+                            (click)="openParticipationInTournament(element.id)">
                             <span class="material-symbols-outlined">
                                 add_circle
                             </span>
@@ -67,5 +69,8 @@
         <mat-paginator #paginator [length]="dataLength" [pageIndex]="0" [pageSize]="3" [pageSizeOptions]="[2, 3, 4, 5]"
             (page)="listTournaments($event)">
         </mat-paginator>
+    </div>
+    <div *ngIf="hasPrivileges()" class="create-profile-container">
+        <a mat-raised-button color="primary" routerLink="/tournaments/create">Adicionar</a>
     </div>
 </div>
