--- a/frontend-angular/src/app/components/federations-list/federations-list.component.html
+++ b/frontend-angular/src/app/components/federations-list/federations-list.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
     <div class="federations-list-container">
         <div class="col-md-6">
-            <app-search-input (search)="search($event)"></app-search-input>
+            <app-search-input [statuses]="statuses" (search)="search($event)"></app-search-input>
         </div>
         <div class="table-responsive">
             <table class="table table-striped">
