0044: Adjustments after including landing page
Included container and rows with featurette
Fixed navbar toggler in the header
Added two linked pages into header component in case of logout users
Renamed method to logout
Added setCurrentMenusByRole method into ngOnInit method inside header component

--- a/frontend-angular/src/app/components/landing/landing.component.css
+++ b/frontend-angular/src/app/components/landing/landing.component.css
@@ -56,6 +56,12 @@ body {
     /* Space out the Bootstrap <hr> more */
 }
 
+/* Thin out the marketing headings */
+/* rtl:begin:remove */
+.featurette-heading {
+    letter-spacing: -.05rem;
+}
+
 /* rtl:end:remove */
 
 /* RESPONSIVE CSS
@@ -72,5 +78,11 @@ body {
 
     .featurette-heading {
         font-size: 50px;
+    }
+}
+
+@media (min-width: 62em) {
+    .featurette-heading {
+        margin-top: 7rem;
     }
 }
