--- a/frontend-angular/src/app/components/landing/landing.component.html
+++ b/frontend-angular/src/app/components/landing/landing.component.html
@@ -11,7 +11,7 @@
                 <div class="carousel-caption text-start">
                     <h1>Karatê-DÔ Tradicional do Piauí</h1>
                     <p>Descubra a tradição e a disciplina do Karatê-DÔ Tradicional praticado no coração do Piauí.</p>
-                    <p><a class="btn btn-lg btn-primary" href="#">Inscreva-se hoje</a></p>
+                    <p><a class="btn btn-lg btn-primary" [routerLink]="['/fichas/criar']">Inscreva-se hoje</a></p>
                 </div>
             </div>
         </div>
@@ -45,24 +45,72 @@
 </div>
 
 <div class="marketing">
-    <div class="row">
-        <div class="col-lg-4 d-flex flex-column align-items-center">
-            <div class="rounded-circle" style="width: 140px; height: 140px; background-color: #777;"></div>
-            <h2 class="fw-normal">Princípios</h2>
-            <p>Descubra os princípios fundamentais do Karatê e fortaleça seu corpo e mente.</p>
-            <p><a class="btn btn-secondary" href="#">Ver detalhes &raquo;</a></p>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-4 d-flex flex-column align-items-center">
+                <div class="rounded-circle" style="width: 140px; height: 140px; background-color: #777;"></div>
+                <h2 class="fw-normal">Princípios</h2>
+                <p>Descubra os princípios fundamentais do Karatê e fortaleça seu corpo e mente.</p>
+                <p><a class="btn btn-secondary" href="#">Ver detalhes &raquo;</a></p>
+            </div>
+            <div class="col-lg-4 d-flex flex-column align-items-center">
+                <div class="rounded-circle" style="width: 140px; height: 140px; background-color: #777;"></div>
+                <h2 class="fw-normal">Experiência</h2>
+                <p>Viva a emoção e a energia dessa arte em cada movimento e cada treinamento.</p>
+                <p><a class="btn btn-secondary" href="#">Ver detalhes &raquo;</a></p>
+            </div>
+            <div class="col-lg-4 d-flex flex-column align-items-center">
+                <div class="rounded-circle" style="width: 140px; height: 140px; background-color: #777;"></div>
+                <h2 class="fw-normal">Técnicas</h2>
+                <p>Domine as técnicas do Karatê sob a orientação de mestres renomados.</p>
+                <p><a class="btn btn-secondary" href="#">Ver detalhes &raquo;</a></p>
+            </div>
         </div>
-        <div class="col-lg-4 d-flex flex-column align-items-center">
-            <div class="rounded-circle" style="width: 140px; height: 140px; background-color: #777;"></div>
-            <h2 class="fw-normal">Experiência</h2>
-            <p>Viva a emoção e a energia dessa arte em cada movimento e cada treinamento.</p>
-            <p><a class="btn btn-secondary" href="#">Ver detalhes &raquo;</a></p>
+    </div>
+    
+    <hr class="featurette-divider">
+    <div class="container">
+        <div class="row featurette justify-content-center">
+            <div class="col-md-7">
+                <h2 class="featurette-heading fw-normal lh-1">Primeira lição de Karatê-Do. <span class="text-muted">Vai impressionar.</span></h2>
+                <p class="lead">Desvende os mistérios do Karatê-Do com uma abordagem autêntica e inspiradora.</p>
+            </div>
+            <div class="col-md-5">
+                <img src="https://via.placeholder.com/500x500/eee/aaa?text=Espaço%20Reservado" class="bd-placeholder-img-lg featurette-image img-fluid" alt="Imagem de Espaço Reservado">
+            </div>
         </div>
-        <div class="col-lg-4 d-flex flex-column align-items-center">
-            <div class="rounded-circle" style="width: 140px; height: 140px; background-color: #777;"></div>
-            <h2 class="fw-normal">Técnicas</h2>
-            <p>Domine as técnicas do Karatê sob a orientação de mestres renomados.</p>
-            <p><a class="btn btn-secondary" href="#">Ver detalhes &raquo;</a></p>
+    </div>
+    
+    <hr class="featurette-divider">
+
+    <div class="container">
+        <div class="row featurette justify-content-center">
+            <div class="col-md-7 order-md-2">
+                <h2 class="featurette-heading fw-normal lh-1">Sim, é incrível. <span class="text-muted">Veja por
+                        si mesmo.</span></h2>
+                <p class="lead">Mais uma lição? Claro. Conteúdo adicional aqui para dar uma ideia de como
+                    este layout funcionaria com algum conteúdo do mundo real.</p>
+            </div>
+            <div class="col-md-5 order-md-1">
+                <img src="https://via.placeholder.com/500x500/eee/aaa?text=Espaço%20Reservado"
+                    class="bd-placeholder-img-lg featurette-image img-fluid mx-auto" alt="Imagem de Espaço Reservado">
+            </div>
+        </div>
+    </div>
+    <hr class="featurette-divider">
+
+    <div class="container">
+        <div class="row featurette justify-content-center">
+            <div class="col-md-7">
+                <h2 class="featurette-heading fw-normal lh-1">E por último, este. <span
+                        class="text-muted">Xeque-mate.</span></h2>
+                <p class="lead">E sim, este é o último bloco de conteúdo representativo. Novamente, não realmente
+                    destinado a ser realmente lido, simplesmente aqui para lhe dar uma melhor visão.</p>
+            </div>
+            <div class="col-md-5">
+                <img src="https://via.placeholder.com/500x500/eee/aaa?text=Espaço%20Reservado"
+                    class="bd-placeholder-img-lg featurette-image img-fluid mx-auto" alt="Imagem de Espaço Reservado">
+            </div>
         </div>
     </div>
     <hr class="featurette-divider">
